--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
             <div class="article-logo floatLeft">
                 <h1>
 				    <a href="/" title="Return to homepage" tabindex="0" accesskey="H">
-				        <span class="hoverline">Stephen </span>L<span class="hoverline">ange</span>
+				        <span class="hoverline">Stephen</span><span class="middot">&middot;</span>L<span class="hoverline">ange</span>
 				    </a>
                 </h1>
             </div>
