--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,9 +7,9 @@
 			<div class="page-meta clear">
 				<div class="info">
 					<span class="index">&#9758;</span><p class="vcard"><a href="/files/Stephen-Lange.vcf" title="Download Stephen Lange&rsquo;s addressbook vCard">Add me to your address book via vCard</a>.</p>
-					<p class="copyright clear">>For an overview of the site, see the <a href="/sitemap/" title="View the site map">site map</a> or <a href="/archives.html#cover" title="View the notebook archives">notebook archives</a>.</p>
-					<p class="copyright clear">Journal content copyright &copy; Stephen Lange, 2013.</p>
-					<p class="copyright clear"><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/2.5/au/" title="Content, unless specificed, licensed under a Creative Commons license">Some rights reserved</a>.</p>
+					<p class="copyright clear">For an overview of the site, see the <a href="/sitemap/" title="View the site map">site map</a> or <a href="/archives.html#cover" title="View the notebook archives">notebook archives</a>.</p>
+					<p class="copyright">Journal content copyright &copy; Stephen Lange, 2013.</p>
+					<p class="copyright"><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/2.5/au/" title="Content, unless specificed, licensed under a Creative Commons license">Some rights reserved</a>.</p>
 <p>
 					<p class="licensing">Full credit for this website's design is fully given to <a href="http://klepas.org/">klepas.org</a></p>
 	
