--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -3,11 +3,8 @@
 		H = homepage
 		S = search input field
 		L = latest article on the homepage
-		F = portfolio
 		A = about page
 		
-		N = next portfolio preview item
-		P = previous prtoflio preview item
 -->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
@@ -18,11 +15,9 @@
     <title>{{ page.title }}</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="content-language" content="en" />
-	<meta name="author" content="Simon Pascal Klein" />
-	<meta name="designer" content="Simon Pascal Klein" />
-	<meta name="developer" content="Simon Pascal Klein" />
-	<meta name="description" content="Personal website and portfolio of Simon Pascal Klein, graphic and web designer, typography nutter and User Interface and Experience aficionado residing down-under in Canberra, Australia." />
-	<meta name="keywords" content="accessibility, Australia, Canberrra, concept, design, German, graphic, interface, typography, UI, usability, UX, web" />
+	<meta name="author" content="Stephen Lange" />
+	<meta name="description" content="Personal website of Stephen Lange." />
+	<meta name="keywords" content="journal, lange, blog, coffee, android, linux" />
 	<meta name="robots" content="noydir, noopd" /> <!-- Opt out of ODP -->
 	
 	<link rel="license" href="http://creativecommons.org/licenses/by-nc-nd/2.5/au/" />
@@ -32,9 +27,9 @@
 	
     <!-- <link rel="stylesheet" href="/css/syntax.css" type="text/css" media="screen" /> -->
 	
-	<link rel="alternate" href="http://feeds.feedburner.com/klepas" title="Simon Pascal Klein" type="application/atom+xml" />
+	<!-- <link rel="alternate" href="http://feeds.feedburner.com/klepas" title="Simon Pascal Klein" type="application/atom+xml" /> -->
 	<!-- Original atom.xml made redundant by feedburner goodness. -->
-	<!-- <link rel="alternate" href="/atom.xml" title="Simon Pascal Klein" type="application/atom+xml" /> -->
+	<link rel="alternate" href="/atom.xml" title="Stephen Lange" type="application/atom+xml" />
 	
 	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.ico" />
 	
