--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
         <div id="header" class="center">
-            <div class="article-logo-alt floatLeft">
+            <div class="article-logo floatLeft">
                 <h1>
 				    <a href="/" title="Return to homepage" tabindex="0" accesskey="H">
 				        <span class="hoverline">Stephen</span><span class="middot">&middot;</span>L<span class="hoverline">ange</span>
