--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
         <div id="header" class="center">
             <div class="article-logo floatLeft">
-                <h1>
+                <h1 class="alt">
 				    <a href="/" title="Return to homepage" tabindex="0" accesskey="H">
 				        <span class="hoverline">Stephen</span><span class="middot">&middot;</span>L<span class="hoverline">ange</span>
 				    </a>
