--- a/_includes/cover.html
+++ b/_includes/cover.html
@@ -19,8 +19,8 @@
 			<div class="subhero-preview colFour floatRight">
 				<h2>A Quote to <em>Consider</em>&hellip;</h2>
 				<h3><!-- <span class="episode-no">Quote #1</span>&thinsp;&mdash;&thinsp; --><span class="episode-title">&lsquo;Friendship&rsquo;</span></h3>
-				<p>Walking with a friend in the dark is better than walking alone in the light.</p>
-				<p class="more"><a class="internal floatRight">&hellip;Hellen Keller</a></p>
+				<p>With school turning out more runners, jumpers, racers, tinkerers, grabbers, snatchers, fliers, and swimmers instead of examiners, critics, knowers, and imaginative creators, the word 'intellectual,' of course, became the swear word it deserved to be.</p>
+				<p class="more"><a class="internal floatRight">&hellip;Ray Bradbury, Fahrenheit 451</a></p>
 			</div>
 			<div class="clear"></div>
 		</div> <!-- /#cover.clear -->
