--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -8,8 +8,8 @@
 						<span class="hoverline">Stephen</span><span class="middot">&middot;</span>L<span class="hoverline">ange</span>
 					</a>
 				</h1>
-				<p class="moin">Welcome to the website of <a href="/about.html#notebook" title="About Stephen Lange &amp; contact details" tabindex="0" accesskey="A">Stephen Lange</a>: by day I work as a humble Secur&shy;ity Architect, my nights are reserved for Family <span class="amp">&amp;</span> Friends.  My passions include: reading, android, coffee, hiking, Linux and Android.</p>
-				<p>Like most people my work <span class="amp">&amp;</span> and home life tend to keep me pretty busy, but from time to time I do like to share my passions with others. This site is my way of doing just that.</p>
+				<p class="moin">Welcome to the website of <a href="/about.html#notebook" title="About Stephen Lange &amp; contact details" tabindex="0" accesskey="A">Stephen Lange</a>: by day I work as a humble Secur&shy;ity Architect, my nights are reserved for Family <span class="amp">&amp;</span> Friends.  My Passions include: Reading, Coffee, Hiking, Linux and Android.</p>
+				<p>Like most people my Work <span class="amp">&amp;</span> and Home Life tend to keep me pretty busy, but from time to time I do like to share my passions with others. This site is my way of doing just that.</p>
 			</div>
 			<div class="skip">
 				<span>Straight to: <a href="/#notebook" title="Skip straight to the latest article" tabindex="0" accesskey="L">&sect; Latest article</a></span>
