--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 					<p class="licensing">Journal content copyright &copy; Stephen Lange, 2013.</p>
 					<p class="licensing"><a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/2.5/au/" title="Content, unless specificed, licensed under a Creative Commons license">Some rights reserved</a>.</p>
 <p>
-					<br><p class="licensing">Full credit for this website's design is fully given to <a href="http://klepas.org/">klepas.org</a></p>
+					<br><p class="licensing">Full credit for this website's design is given to <a href="http://klepas.org/">klepas.org</a>.</p>
 	
 				</div>
 			</div> <!-- /.page-meta.clear -->
