--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -8,7 +8,7 @@
 						<span class="hoverline">Stephen</span><span class="middot">&middot;</span>L<span class="hoverline">ange</span>
 					</a>
 				</h1>
-				<p class="moin">Welcome to the website of <a href="/about.html#notebook" title="About Stephen Lange &amp; contact details" tabindex="0" accesskey="A">Stephen Lange</a>: by day I work as a humble Secur&shy;ity Architect, my nights are reserved for Family <span class="amp">&amp;</span> Friends.  My Passions include: Reading, Coffee, Hiking, Linux and Android.</p>
+				<p class="moin">Welcome to the website of <a href="/about.html#notebook" title="About Stephen Lange &amp; contact details" tabindex="0" accesskey="A">Stephen Lange</a>: by day I work, my nights are reserved for Family <span class="amp">&amp;</span> Friends.  My Passions include: Reading, Coffee, Hiking, Linux and Android.</p>
 				<p>Like most people my Work <span class="amp">&amp;</span> and Home Life tend to keep me pretty busy, but from time to time I do like to share my thoughts with others. This site is my way of doing just that.</p>
 			</div>
 			<div class="skip">
