--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,5 +14,29 @@
 					<br><p class="licensing">Full credit for this website's design is given to <a href="http://klepas.org/">klepas.org</a>.</p>
 	
 				</div>
-			</div> <!-- /.page-meta.clear -->
+<div class="type-folly">
+                                        <em>Type
+                                                <span>set
+                                                        <span>with
+                                                                <span>love
+                                                                        <span>{
+                                                                                <span>&hearts;
+                                                                                        <span>}</span>
+                                                                                </span>
+                                                                        </span>
+                                                                </span>
+                                                        </span>
+                                                </span>
+                                        </em>
+                                        <strong>in
+                                                <span>Georgia
+                                                        <span>&amp;
+                                                                <span>Museo</span>
+                                                        </span>
+                                                </span>
+                                        </strong>
+                                        <span class="markup">&hellip;all in mostly valid <a rel="external" href="http://jigsaw.w3.org/css-validator/check/referer"><acronym title="Cascading Style Sheets">CSS</acronym></a> <span class="amp">&amp;</span> <a rel="external" href="http://validator.w3.org/check?uri=referer"><acronym title="eXtensible Hyper Text Markup Language">XHTML</acronym></a>; as <acronym title="plain old semantic (X)HTML">POSH</acronym> as can be.</span>
+                                </div>
+
+        </div> <!-- /.page-meta.clear -->
 		</div> <!-- /#footer.center.clear -->
