--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,9 @@
 	
 				</div>
 <div class="type-folly">
-                                        <em>Type
+Thanks for Reading!
+
+                                        <em>TType
                                                 <span>set
                                                         <span>with
                                                                 <span>love
