--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -8,7 +8,7 @@
 						<span class="hoverline">Stephen</span><span class="middot">&middot;</span>L<span class="hoverline">ange</span>
 					</a>
 				</h1>
-				<p class="moin">Welcome to the website of <a href="/about.html#notebook" title="About Stephen Lange &amp; contact details" tabindex="0" accesskey="A">Stephen Lange</a>.  In the digital roadmap that is the Internet, this website is a tiny bump, barely noticed.  Insignificant as it may be, you may find that you enjoy it here.</p>
+				<p class="moin">Welcome weary traveler.  What twists and turns have led you to my door?  Worry not, you are welcome here.  Stay as long as you like.</p>
 				
 				<p>Like most people my Work <span class="amp">&amp;</span> and Home Life tend to keep me pretty busy, but from time to time I do like to share my thoughts with others. This site is my way of doing just that.</p>
 			</div>
