--- a/_includes/header-home.html
+++ b/_includes/header-home.html
@@ -1,6 +1,6 @@
         <div id="header" class="center">
 			<div class="logo floatLeft">
-				<img width="442" height="573" alt="Wordsmithing Through Time." src="/images/ingsoc.gif" />
+				<img width="442" height="573" alt="Wordsmithing Through Time." src="/images/hopper.png" />
 			</div>
 			<div class="hero floatRight">
 				<h1>
