--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -3,7 +3,7 @@
 				<li><a href="/about.html#notebook" title="About &amp; contact information" tabindex="0">About <span class="amp">&amp;</span> Contact</a></li>
 				<li><a href="/archives.html#cover" title="View the notebook archives" tabindex="0">Archives</a></li>
             </ul>
-			<div class="sitesearch floatRight">
+<!-- 			<div class="sitesearch floatRight">
                 <div class="sitesearch">
                     <!-- Google Custom Search Element -->
                     <form action="http://www.google.com/cse" class="center_column" />
@@ -14,6 +14,6 @@
                        <input id="searchsubmit" type="submit" name="sa" value="Search" tabindex="0" />
                     </fieldset>
                 </div>
-            </div>
-			<div class="clear"></div>
+            </div> -->
+ 			<div class="clear"></div>
         </div> <!-- /#nav.clear -->
