--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,5 +6,7 @@ layout: base
 		<div id="notebook" class="center clear">
             <div class="page-content colEight">
                 {{ content }}
-            </div> <!-- /.page-content.colEight -->
+
+                {% include comments.html %}
+        </div> <!-- /.page-content.colEight -->
         </div> <!-- /#notebook.center.clear -->
