--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,6 +1,7 @@
 {% if page.comments %}
 <!-- Add Disqus comments. -->
-<div id="disqus_thread"></div>
+<!-- <div id="disqus_thread"></div> -->
+<div id="container"></div>
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'stephenlangeorg'; // required: replace example with your forum shortname
