--- a/css/screen.css
+++ b/css/screen.css
@@ -53,7 +53,38 @@ body {
 	line-height: 1.5; /* We can use unitless numbers here; they act as multiples of the font-size. */
 	color: #111;
 	}
-	
+
+div#disqus_thread {
+        margin: 0 auto 0 auto;
+        padding: 4.8em 0 4.8em 0;
+        background-color: white;
+        text-align: left;
+        width: 96em; /* 960 minus the gutters (48 on each side). */
+        /* Box shadowing that provides a nice page shadow; experimental shiny stuff. */
+        box-shadow: 0 0 4em #777;
+        -webkit-box-shadow: 0 0 4em #777;
+        -moz-box-shadow: 0 0 4em #777;
+        }
+        h3, h4, h5, h6 { font-family: "Museo Sans 500 Regular", "Lucida Grande", Verdana, "DejaVu Sans", sans-serif; }
+        h2 { font-size: 3.2em; color: #666; margin-bottom: 0.5em; /* 16 */ }
+        h3, div#footer h2 { font-size: 2.4em; color: #bb0000; margin: 0.666em 0; /* 16 */ }
+        h4 { font-size: 1.8em; color: #111; margin: 0.888em 0; /* 16 */ }
+        h5 { font-size: 1.4em; font-weight: bold; color: #111; margin: 1.142em 0; /* 16 */ }
+        h6 { font-size: 1.2em; text-transform: uppercase; letter-spacing: 1px; color: #bb0000; margin: 1.142em 0; /* 16 */ }
+        p { font-size: 1.6em; padding: 0; text-align: justify; }
+        a, a:hover, a:active, a:focus { text-decoration: none; }
+        a { color: #336699; }
+                a:hover, a:active, a:focus {
+                        color: #111;
+                        border-bottom: 1px solid #999;
+                        background-color: #fbeec2;
+                        }
+        a.internal {
+        color: #666;
+        font-family: "Museo Sans 500 Regular", "Lucida Grande", Verdana, "DejaVu Sans", sans-serif;
+        }
+
+
 div#container {
 	margin: 0 auto 0 auto;
 	padding: 4.8em 0 4.8em 0;
