--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -53,7 +53,7 @@
 <body>
 	<div id="container">
 		{{ content }}
-        {% include comments.html %}
+        <!-- {% include comments.html %} -->
         {% include footer.html %}
 	</div>
 </body>
