--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,6 @@ layout: base
             <div class="page-content colEight">
                 {{ content }}
 
-                {% include comments.html %}
+               <!-- {% include comments.html %} -->
         </div> <!-- /.page-content.colEight -->
         </div> <!-- /#notebook.center.clear -->
