--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,6 @@
 
 </head>
 <body>
-
 <div class="site">
   <div class="title">
     <a href="/">Stephen Lange</a>
@@ -26,17 +25,10 @@
   <div class="footer">
     <div class="contact">
       <p>
-        Stephen Lange<br />
-        stvlange@gmail.com
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/stvlange/">github.com/stvlange</a>
+        Stephen Lange (stvlange@gmail.com)
       </p>
     </div>
   </div>
 </div>
-
 </body>
 </html>
