--- a/css/screen.css
+++ b/css/screen.css
@@ -195,3 +195,31 @@ ul.posts {
   #related h2 {
     margin-bottom: 1em;
   }
+
+
+  blockquote {
+      background-color: #9786c6;
+      border-left: 1em solid #5236a0;
+      margin: 1.5em 0 1.5em;
+      padding: 1em 1.5em 0 2.5em;
+      position: relative;
+  }
+  blockquote:before {
+    color: #392570;
+    content: "\201C";
+    font-size: 5em;
+    position:absolute;
+    left:5px;
+    top: 0.6em;
+    line-height: 0.1em;
+  }
+
+  blockquote:after {
+     color: #392570;
+    content: "\201D";
+    font-size: 5em;
+    position:absolute;
+    right:3px;
+    bottom: 0em;
+    line-height: 0.1em;
+  }
