--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,9 +6,8 @@
     <img src="/logo.png" id="logo" alt="Blog logo"/>
     {% endif %}
   </a>
-  <h2><a href="/">{{ site.data.theme.name }}</a>.</h2>
+  <h2><a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p> </p>
   </div>
   <div id="social">
     {% include social.html %}
