--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,5 +1,6 @@
 <div id="stalker">
-  {% if site.data.theme.social.github %}
+<center> 
+ {% if site.data.theme.social.github %}
   <a title="{{ site.data.theme.social.github }} on Github" href="https://github.com/{{ site.data.theme.social.github }}">
     <i class="fa fa-github-square"></i>
   </a>
@@ -65,4 +66,5 @@
   <a title="Atom feed" id="atom" href="/atom.xml">
     <i class="fa fa-rss-square"></i>
   </a>
+  </center>
 </div>
