--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,6 +8,7 @@
   </a>
   <h2><a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
+  <p>"Never trust atoms, they make up everything."</p>
   </div>
   <div id="social">
     {% include social.html %}
