--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
   </a>
 </p>
 
-<h1 class="title">{{ page.title }}</h1>
+<h1 class="title"><i class="fa {{ post.icon }}"></i>{{ page.title }}</h1>
 
 <div id="post">
   {{ content }}
