--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,7 +16,7 @@ layout: default
 </div>
 
 <div id="related">
-  <h3>Related Posts</h3>
+  <h3>Other Posts</h3>
   <ul class="posts">
     {% for post in site.related_posts limit:3 %}
     <li>
