--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -6,6 +6,7 @@
     width: $banner-width;
     height: $banner-height;
     margin: 0 auto 35px;
+	margin-top: 50px;
     position: relative; /* To ensure the bottom border is positioned correctly */
 
     h1 {
