--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,15 @@
 ---
 layout: default
 ---
+<div id="post">
+{{ content }}
+</div>
 
-{% include post.html post=page content=content %}
+<div id="related">
+  <h2>Related Posts</h2>
+  <ul class="posts">
+    {% for post in site.related_posts limit:3 %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
