--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
-   <meta name="author" content="Tom Preston-Werner" />
+   <meta name="author" content="Stephen Lange" />
    <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
@@ -27,7 +27,7 @@ var WRInitTime=(new Date()).getTime();
 
 <div class="site">
   <div class="title">
-    <a href="/">Tom Preston-Werner</a>
+    <a href="/">Stephen Lange</a>
     <a class="extra" href="/">home</a>
   </div>
 
@@ -36,13 +36,8 @@ var WRInitTime=(new Date()).getTime();
   <div class="footer">
     <div class="contact">
       <p>
-        Tom Preston-Werner
-        <br />
-        Cofounder of
-          <a href="https://codestarter.org/">Codestarter</a>,
-          <a href="https://github.com/">GitHub</a>
-        <br />
-        tom@mojombo.com
+        Stephen Lange<br>
+        stvlange@gmail.com
       </p>
     </div>
     <div class="contact">
@@ -52,14 +47,12 @@ var WRInitTime=(new Date()).getTime();
       </p>
     </div>
     <div class="rss">
-      <a href="http://feeds.feedburner.com/tom-preston-werner">
+      <a href="http://feeds.feedburner.com/stephenlange">
         <img src="/images/rss.png" alt="Subscribe to RSS Feed" />
       </a>
     </div>
   </div>
 </div>
-
-<a href="http://github.com/mojombo"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub" /></a>
 
 <!-- ClickTale Bottom part -->
 <div id="ClickTaleDiv" style="display: none;"></div>
@@ -72,16 +65,7 @@ if(typeof ClickTale=='function') ClickTale(206,0.3,"www03");
 </script>
 <!-- ClickTale end of Bottom part -->
 
-<!-- Google Analytics -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-6016902-1");
-pageTracker._trackPageview();
-</script>
-<!-- Google Analytics end -->
+
 
 </body>
 </html>
