--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <title>{{ page.title }}</title>
    <meta name="author" content="Stephen Lange" />
-   <link href="http://feeds.feedburner.com/tom-preston-werner" rel="alternate" title="Tom Preston-Werner" type="application/atom+xml" />
+   <link href="http://feeds.feedburner.com/stephenlange" rel="alternate" title="Stephen Lange" type="application/atom+xml" />
    <meta name="readability-verification" content="QCzSs992GxmRYRKVpPeZ6LE2tS8aYKxsSSQKV8YM"/>
 
    <!-- syntax highlighting CSS -->
@@ -19,7 +19,7 @@
 </head>
 <body>
 
-<!-- ClickTale Top part -->
+<!-- ClickTale Top part 
 <script type="text/javascript">
 var WRInitTime=(new Date()).getTime();
 </script>
@@ -54,7 +54,7 @@ var WRInitTime=(new Date()).getTime();
   </div>
 </div>
 
-<!-- ClickTale Bottom part -->
+<!-- ClickTale Bottom part 
 <div id="ClickTaleDiv" style="display: none;"></div>
 <script type="text/javascript">
 if(document.location.protocol!='https:')
