--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,9 +13,9 @@
    <!-- Homepage CSS -->
    <link rel="stylesheet" href="/css/screen.css" type="text/css" media="screen, projection" />
 
-   <!-- Typekit -->
+   <!-- Typekit 
    <script type="text/javascript" src="http://use.typekit.com/jpd0pfm.js"></script>
-   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+   <script type="text/javascript">try{Typekit.load();}catch(e){}</script>-->
 </head>
 <body>
 
@@ -38,12 +38,6 @@ var WRInitTime=(new Date()).getTime();
       <p>
         Stephen Lange<br>
         stvlange@gmail.com
-      </p>
-    </div>
-    <div class="contact">
-      <p>
-        <a href="http://github.com/mojombo/">github.com/mojombo</a><br />
-        <a href="http://twitter.com/mojombo/">twitter.com/mojombo</a><br />
       </p>
     </div>
     <div class="rss">
