--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <!--- Header and nav template site-wide -->
 <header>
     <nav class="group">
-	<a href="{{site.baseurl}}/"><img class="badge" src="{{site.baseurl}}/assets/img/badge_2.png" alt="CH"></a>
+	    <!--- original: <a href="{{site.baseurl}}/"><img class="badge" src="{{site.baseurl}}/assets/img/badge_2.png" alt="CH"></a> --> 
+	<a href="{{site.baseurl}}/"><img class="badge" src="{{site.baseurl}}/assets/img/circle.png" alt="CH"></a>
 	{% for node in site.pages %}
 		{% unless node.nav_exclude %}
 		    {% if page.url == node.url %}
