--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <header>
     <nav class="group">
 	    <!--- original: <a href="{{site.baseurl}}/"><img class="badge" src="{{site.baseurl}}/assets/img/badge_2.png" alt="CH"></a> --> 
-	<a href="{{site.baseurl}}/"><img class="badge" src="{{site.baseurl}}/assets/img/circle.png" alt="CH"></a>
+	<a href="{{site.baseurl}}/"><img class="badge" src="{{site.baseurl}}/assets/img/square.png" alt="SL"></a>
 	{% for node in site.pages %}
 		{% unless node.nav_exclude %}
 		    {% if page.url == node.url %}
